--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@tailwindcss/vite": "^4.1.10",
     "axios": "^1.9.0",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.515.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
     "react-spinners": "^0.17.0",
+    "recharts": "^2.15.3",
     "sweetalert2": "^11.22.0"
   },
   "devDependencies": {
